--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Roboto:wght@100;400&display=swap"rel="stylesheet"/>
+   
 </head>
 <body>
-    <div>
+    <div id="titulo">
         <h1 id="head">¿Pero Que Carajo Vemos?</h1>
     </div>
-    <div id="contenedor">
+    <section id="pelis">
+        <div id="contenedor">
 
-    </div>
-    <div>
+        </div>
+    </section>
+    
+    <div id="input">
         <form action="" id="form" onSubmit="return false;">
-        <input type="text" placeholder="ingresa tu pelicula" id="peliculaz" >
+        <input type="text" placeholder="Ingresa tu pelicula" id="peliculaz" >
     </form>
     </div>
     <div id="boton">   
