--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="titulo">
-        <h1 id="head">¿Pero Que Carajo Vemos?</h1>
+        <h1 id="head">¿Que vemos hoy?</h1>
     </div>
     <section id="pelis">
         <div id="contenedor">
